--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
   assets:
     - assets/routeInfo.txt
     - assets/TYLine.txt
+    - assets/JNLine.txt
 
   # To add assets to your application, add an assets section, like this:
   # assets:
