--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/TYLine.txt
     - assets/JNLine.txt
     - assets/TRLine.txt
+    - assets/GLine.txt
 
   # To add assets to your application, add an assets section, like this:
   # assets:
