--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -46,5 +46,7 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app needs access to location when open.</string>
 
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 </dict>
 </plist>
