--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   geolocator: ^8.2.1
+  geolocator_web: ^2.1.5
 
 dev_dependencies:
   flutter_test:
